--- a/graphql-server/package.json
+++ b/graphql-server/package.json
@@ -14,7 +14,8 @@
 		"babel-node": "^0.0.1-security",
 		"express": "^4.17.3",
 		"express-graphql": "^0.12.0",
-		"graphql": "^15.8.0"
+		"graphql": "^15.8.0",
+		"mongoose": "^6.2.6"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.17.7",
