--- a/graphql-server/package.json
+++ b/graphql-server/package.json
@@ -12,6 +12,7 @@
 	"dependencies": {
 		"apollo-server-express": "^3.6.4",
 		"babel-node": "^0.0.1-security",
+		"dotenv": "^16.0.0",
 		"express": "^4.17.3",
 		"express-graphql": "^0.12.0",
 		"graphql": "^15.8.0",
