--- a/graphql-server/package.json
+++ b/graphql-server/package.json
@@ -12,10 +12,12 @@
 	"dependencies": {
 		"apollo-server-express": "^3.6.4",
 		"babel-node": "^0.0.1-security",
+		"cors": "^2.8.5",
 		"dotenv": "^16.0.0",
 		"express": "^4.17.3",
 		"express-graphql": "^0.12.0",
 		"graphql": "^15.8.0",
+		"graphql-disable-introspection": "^1.2.0",
 		"mongoose": "^6.2.6"
 	},
 	"devDependencies": {
