--- a/client/package.json
+++ b/client/package.json
@@ -38,5 +38,5 @@
 			"last 1 safari version"
 		]
 	},
-	"proxy": "http://localhost:4000/graphqlapi"
+	"proxy": "https://recipes-graphql-api.dev.carblife.icu/graphqlapi"
 }
