--- a/graphql-server/package.json
+++ b/graphql-server/package.json
@@ -18,7 +18,8 @@
 		"express-graphql": "^0.12.0",
 		"graphql": "^15.8.0",
 		"graphql-disable-introspection": "^1.2.0",
-		"mongoose": "^6.2.6"
+		"mongoose": "^6.2.6",
+		"nodemon": "^2.0.15"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.17.7",
